# systemssummer2025

./: README.md
07-21-25/Module-1/src/: main.rs
07-21-25/assignment-1/: Cargo.toml
07-21-25/assignment-1/src/: main.rs
data fetch/: README.md
data fetch/data-fetch/: Cargo.toml  bitcoin.txt  ethereum.txt  sp500.txt
data fetch/data-fetch/src/: main.rs
final_project/website_status_checker/: Cargo.toml
final_project/website_status_checker/src/: main.rs
homework1/my_project/src/: main.rs
memory_management/Module-2/: Cargo.toml
memory_management/Module-2/src/: main.rs
struct/Module-3/: Cargo.toml
struct/Module-3/src/: main.rs
